[gd_scene load_steps=23 format=3 uid="uid://bmyv2dpcvqwxt"]

[ext_resource type="Script" path="res://player/player.gd" id="1_4a0a4"]
[ext_resource type="Texture2D" uid="uid://clw17hq2koxm8" path="res://player/assets/character_a.png" id="1_scc2k"]
[ext_resource type="PackedScene" uid="uid://csxrn46lid2jd" path="res://player/UI/ui.tscn" id="4_8g560"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itnuu"]
size = Vector2(6, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qtcnn"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a08nk"]
size = Vector2(2, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh0ov"]
atlas = ExtResource("1_scc2k")
region = Rect2(40, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_52d3u"]
atlas = ExtResource("1_scc2k")
region = Rect2(48, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3upo"]
atlas = ExtResource("1_scc2k")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfdig"]
atlas = ExtResource("1_scc2k")
region = Rect2(56, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0ksi"]
atlas = ExtResource("1_scc2k")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_q63mu"]
atlas = ExtResource("1_scc2k")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_giss6"]
atlas = ExtResource("1_scc2k")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kik4r"]
atlas = ExtResource("1_scc2k")
region = Rect2(32, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_2v2dm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh0ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52d3u")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3upo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfdig")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0ksi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q63mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giss6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kik4r")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_n5ci4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rwwix"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": ["climb"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_0rjip"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": ["idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_omud0"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": ["jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vhk4v"]
resource_name = "die"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_7eat0"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": ["walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4d0wc"]
_data = {
"RESET": SubResource("Animation_n5ci4"),
"climb": SubResource("Animation_rwwix"),
"idle": SubResource("Animation_0rjip"),
"jump": SubResource("Animation_omud0"),
"spawn": SubResource("Animation_vhk4v"),
"walk": SubResource("Animation_7eat0")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(5, 5)
collision_layer = 2
collision_mask = 19
floor_block_on_wall = false
script = ExtResource("1_4a0a4")
metadata/can_leave = false

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_itnuu")

[node name="OffScreenDetector" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.76837e-07, 4.76837e-07)
rect = Rect2(-0.5, -0.5, 1, 1)

[node name="OWPDetectors" type="Node2D" parent="."]

[node name="Top" type="ShapeCast2D" parent="OWPDetectors"]
shape = SubResource("RectangleShape2D_qtcnn")
target_position = Vector2(0, -5)
collision_mask = 16

[node name="Bottom" type="ShapeCast2D" parent="OWPDetectors"]
shape = SubResource("RectangleShape2D_qtcnn")
target_position = Vector2(0, 5)
collision_mask = 16

[node name="LadderDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Collider" type="CollisionShape2D" parent="LadderDetector"]
shape = SubResource("RectangleShape2D_a08nk")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2v2dm")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4d0wc")
}

[node name="UI" parent="." instance=ExtResource("4_8g560")]

[connection signal="screen_exited" from="OffScreenDetector" to="." method="_on_off_screen_detector_screen_exited"]
[connection signal="body_entered" from="LadderDetector" to="." method="_on_ladder_detector_body_entered"]
[connection signal="body_exited" from="LadderDetector" to="." method="_on_ladder_detector_body_exited"]
